# inputmodule-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  commands.md  control.py  devenv.nix  flash_layout.md  framework-inputmodule-rs.service  led-matrix.py  ledmatrix_control.py  lotus-led-matrix.py  memory.x  postinstall.sh  python.md  release.sh  remap-path-prefix.py  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci_checks.yml  cla.yml  firmware.yml  release.yml  software.yml  traditional-cargo.yml
b1display/: Cargo.toml  Makefile.toml  README.md
b1display/src/: main.rs
c1minimal/: Cargo.toml  Makefile.toml  README.md
c1minimal/src/: main.rs
dbus-monitor/: Cargo.toml
dbus-monitor/src/: config.json  dbus_monitor.rs  main.rs  utils.rs
docs/: flash-storage.md
fl16-inputmodules/: Cargo.toml  Makefile.toml  build.rs
fl16-inputmodules/src/: animations.rs  control.rs  fl16.rs  graphics.rs  keyboard_hal.rs  lcd_hal.rs  led_hal.rs  lib.rs  mapping.rs  matrix.rs  minimal_hal.rs  patterns.rs  qtpy_hal.rs  serialnum.rs
fl16-inputmodules/src/games/: game_of_life.rs  mod.rs  pong.rs  pong_animation.rs  snake.rs  snake_animation.rs
fl16-inputmodules/src/storage/: config.rs  flash.rs  mod.rs  patterns.rs
fwupd/: .gitignore  Makefile  firmware.metainfo.xml
inputmodule-control/: Cargo.toml  Makefile.toml
inputmodule-control/src/: b1display.rs  c1minimal.rs  commands.rs  font.rs  inputmodule.rs  ledmatrix.rs  lib.rs  main.rs
inputmodule-dbus-monitor/: Cargo.toml
inputmodule-dbus-monitor/src/: main.rs
keyboard/: Cargo.toml  Makefile.toml  README.md
keyboard/src/: main.rs  rgb_matrix.rs
ledmatrix/: 50-framework.rules  Cargo.toml  Makefile.toml  README.md
ledmatrix/src/: main.rs
lotus-inputmodules/: Cargo.toml
lotus-inputmodules/src/: control.rs  graphics.rs  lib.rs  lotus_lcd_hal.rs  matrix.rs  patterns.rs
lotus-inputmodules/src/games/: game_of_life.rs  mod.rs  pong.rs  snake.rs
python/: README.md  ledris.py  pyproject.toml  requirements.txt  sample.py
python/framework16_inputmodule/: cli.py
python/framework16_inputmodule/gui/: __init__.py  games.py  ledmatrix.py
python/framework16_inputmodule/inputmodule/: __init__.py  b1display.py  c1minimal.py  ledmatrix.py
python/framework16_inputmodules/: cli.py  font.py  ledmatrix_control.py
python/framework16_inputmodules/gui/: __init__.py  games.py  gui_threading.py  ledmatrix.py
python/framework16_inputmodules/inputmodule/: __init__.py  b1display.py  c1minimal.py  ledmatrix.py
python/inputmodule/: cli.py  firmware_update.py  games.py  uf2conv.py
python/inputmodule/gui/: __init__.py  games.py  gui_threading.py  ledmatrix.py
python/inputmodule/gui/games/: __init__.py
python/inputmodule/gui/pygames/: snake.py
python/inputmodule/inputmodule/: __init__.py  b1display.py  c1minimal.py  ledmatrix.py
qtpy/: Cargo.toml  Makefile.toml  README.md
qtpy/src/: main.rs  usbd_picotool_reset.rs
release/: 50-framework-inputmodule.rules  framework-inputmodule-rs.service  postinstall.sh  release.sh
scripts/: clear.py  clear.sh  serial.py  serial.sh
src/: control.rs  graphics.rs  lib.rs  lotus.rs  lotus_lcd_hal.rs  lotus_led_hal.rs  main.rs  mapping.rs  matrix.rs  patterns.rs  serialnum.rs
src/games/: mod.rs  pong.rs  snake.rs  tetris.rs
