# Not stable yet :(
# Trackign issue: https://github.com/rust-lang/cargo/issues/9406
# cargo-features = ["per-package-target"]

[workspace]
resolver = "2"
members = [
    "b1display",
    "c1minimal",
    "ledmatrix",
    "fl16-inputmodules",
    "inputmodule-control",
]
# Don't build all of them by default.
# Because that'll lead to all features enabled in `fl16-inputmodules` and it
# doesn't currently support building with all features enabled at the same
# time.
# Can't add `inputmodule-control` because it must be built with the host system
# target. But we set the default target to thumbv6m-none-eabi
default-members = ["fl16-inputmodules"]

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-panic-usb-boot = "0.5.0"
rp2040-hal = { version = "0.8", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
# USB Serial
usb-device = "0.2.9"
heapless = "0.7.16"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"
fugit = "0.3.7"
# LED Matrix
is31fl3741 = { git = "https://github.com/JohnAZoidberg/is31fl3741", branch = "merged" }
# B1 Display
st7306 = { git = "https://github.com/FrameworkComputer/st7306-rs", branch = "update-deps" }
embedded-graphics = "0.8"
tinybmp = "0.5.0"
# C1 Minimal
smart-leds = "0.3.0"
ws2812-pio = "0.6.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
# To allow single-stepping through code use 0. Will cause timing issues, though
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
