# Not stable yet :(
# Trackign issue: https://github.com/rust-lang/cargo/issues/9406
# cargo-features = ["per-package-target"]

[workspace]
resolver = "2"
members = [
    "b1display",
    "c1minimal",
    "ledmatrix",
    "fl16-inputmodules",
    "inputmodule-control",
    "qtpy",
]
# Don't build all of them by default.
# Because that'll lead to all features enabled in `fl16-inputmodules` and it
# doesn't currently support building with all features enabled at the same
# time.
# Can't add `inputmodule-control` because it must be built with the host system
# target. But we set the default target to thumbv6m-none-eabi
default-members = ["fl16-inputmodules"]

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0"
embedded-hal-bus = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-panic-usb-boot = "0.6.0"
rp2040-hal = { version = "0.11", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"
# USB Serial
usb-device = "0.3.2"
heapless = "0.8"
usbd-serial = "0.2.2"
fugit = "0.3.7"
is31fl3741 = { version = "0.4.0", features = ["framework_ledmatrix"] }
# B1 Display
st7306 = { git = "https://github.com/FrameworkComputer/st7306-rs", tag = "v0.10.0" }
embedded-graphics = "0.8"
tinybmp = "0.5.0"
# C1 Minimal
smart-leds = "0.3.0"
ws2812-pio = "0.9.0"

[profile.dev.package.ledmatrix]
codegen-units = 1
incremental = true
# To allow single-stepping through code use 0. Will cause timing issues, though
opt-level = 3

[profile.dev.package.c1minimal]
codegen-units = 1
incremental = true
# To allow single-stepping through code use 0. Will cause timing issues, though
opt-level = 3

[profile.dev.package.b1display]
codegen-units = 1
incremental = true
# To allow single-stepping through code use 0. Will cause timing issues, though
opt-level = 3

[profile.dev.package.qtpy]
codegen-units = 1
incremental = true
# To allow single-stepping through code use 0. Will cause timing issues, though
opt-level = 3

# Faster and smaller code but much slower to compile.
# Increase in rebuild time from <1s to 20s
[profile.release]
codegen-units = 1
debug = 2
lto = 'fat'
