[package]
edition = "2021"
name = "b1display"
version = "0.1.4"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"

#panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-panic-usb-boot = { git = "https://github.com/rwalkr/rp2040-panic-usb-boot" }

# Not using an external BSP crate, we've got the Framework Laptop 16 BSPs locally in this crate
rp2040-hal = { version="0.7", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"

# USB Serial
usb-device= "0.2.9"

heapless = "0.7.9"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
fugit = "0.3.6"

st7306-lcd = { git = "ssh://git@github.com/FrameworkComputer/st7306.git" }
embedded-graphics = "0.7"
tinybmp = "0.4.0"

[dependencies.fl16-inputmodules]
path = "../fl16-inputmodules"
features = [ "b1display" ]
