[package]
edition = "2021"
name = "b1display"
version = "0.2.0"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
embedded-hal-bus.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

#panic-probe.workspace = true
rp2040-panic-usb-boot.workspace = true

# Not using an external BSP, we've got the Framework Laptop 16 BSPs locally in this crate
rp2040-hal.workspace = true
rp2040-boot2.workspace = true

# USB Serial
usb-device.workspace = true
heapless.workspace = true
usbd-serial.workspace = true
fugit.workspace = true

st7306.workspace = true
embedded-graphics.workspace = true
tinybmp.workspace = true

[dependencies.fl16-inputmodules]
path = "../fl16-inputmodules"
features = [ "b1display" ]
