[package]
edition = "2021"
name = "c1minimal"
version = "0.1.4"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"

#panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-panic-usb-boot = { git = "https://github.com/rwalkr/rp2040-panic-usb-boot" }

# Not using an external BSP, we've got the Framework Laptop BSPs locally in this crate
rp2040-hal = { version="0.7", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"

# USB Serial
usb-device= "0.2.9"

heapless = "0.7.9"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"
fugit = "0.3.6"

smart-leds = "0.3.0"
ws2812-pio = "0.5.0"

[dependencies.fl16-inputmodules]
path = "../fl16-inputmodules"
features = [ "c1minimal" ]
