[package]
edition = "2021"
name = "fl16-inputmodules"
version = "0.1.4"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"

#panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-panic-usb-boot = "0.5.0"

# Not using an external BSP, we've got the Framework Laptop 16 BSPs locally in this crate
rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"

# USB Serial
usb-device= "0.2.9"

heapless = "0.7.16"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"
fugit = "0.3.6"
num = { version = "0.4", default-features = false }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }

# LED Matrix
is31fl3741 = { git = "https://github.com/JohnAZoidberg/is31fl3741", branch = "all-at-once", optional = true }

# B1 Display
st7306 = { version = "0.8.2", optional = true }
embedded-graphics = { version = "0.7", optional = true }
tinybmp = { version = "0.4.0", optional = true }

# C1 Minimal
smart-leds = { version = "0.3.0", optional = true }
ws2812-pio = { version = "0.6.0", optional = true }

[features]
default = []
ledmatrix = [ "is31fl3741" ]
b1display = [ "st7306", "embedded-graphics", "tinybmp" ]
c1minimal = ["smart-leds", "ws2812-pio" ]
