[package]
edition = "2021"
name = "fl16-inputmodules"
version = "0.1.6"

[dependencies]
crc = "3.0"
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

#panic-probe.workspace = true
rp2040-panic-usb-boot.workspace = true

# Not using an external BSP, we've got the Framework Laptop 16 BSPs locally in this crate
rp2040-hal.workspace = true
rp2040-boot2.workspace = true

# USB Serial
usb-device.workspace = true
heapless.workspace = true
usbd-serial.workspace = true
usbd-hid.workspace = true
fugit.workspace = true

num = { version = "0.4", default-features = false }
num-derive = "0.3"
num-traits = { version = "0.2", default-features = false }

# LED Matrix
is31fl3741 = { workspace = true, optional = true }

# B1 Display
st7306 = { workspace = true, optional = true }
embedded-graphics = { workspace = true, optional = true }
tinybmp = { workspace = true, optional = true }

# C1 Minimal
smart-leds = { workspace = true, optional = true }
ws2812-pio = { workspace = true, optional = true }

# Persistent configuration
rp2040-flash = "0.3.1"
#serde = { version = "1.0.183", default-features = false, features = ["derive"]}
serde = { default-features = false, features = [
    "derive",
], version = "1.0" } ##it = "file:///home/zoid/clone/reference/serde", branch = "array-34-100" }
#serde_derive = { default-features = false, features = [
#], git = "file:///home/zoid/clone/reference/serde", branch = "array-34" }
#serde-big-array = "0.5.1"
#serde_arrays = { version = "0.1.0", default-features = false, git = "https://github.com/jaredwolff/serde_arrays.git", features = [
#    "no-std",
#] }
postcard = "1.0.0"

[features]
default = []
ledmatrix = ["is31fl3741"]
b1display = ["st7306", "embedded-graphics", "tinybmp"]
c1minimal = ["smart-leds", "ws2812-pio"]
