[package]
edition = "2021"
name = "inputmodule-control"
version = "0.1.4"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serialport = "4.2.0"

# For ledmatrix
image = { version = "0.24.5", default-features = false, features = [
    "ico",
    "gif",
] }
rand = "0.8.5"
chrono = "0.4.23"
