[package]
edition = "2021"
name = "ledmatrix"
version = "0.1.5"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"

#panic-probe = { version = "0.3", features = ["print-defmt"] }
rp2040-panic-usb-boot = "0.5.0"

# Not using an external BSP, we've got the Framework Laptop 16 BSPs locally in this crate
rp2040-hal = { version = "0.8", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"

# USB Serial
usb-device = "0.2.9"

heapless = "0.7.16"
usbd-serial = "0.1.1"
usbd-hid = "0.6.1"
fugit = "0.3.7"

is31fl3741 = { git = "https://github.com/JohnAZoidberg/is31fl3741", branch = "merged" }

[dependencies.fl16-inputmodules]
path = "../fl16-inputmodules"
features = ["ledmatrix"]
