[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "inputmodule"
# TODO: Dynamic version from git (requires tags)
#dynamic = ["version"]
version = "0.1.1"
description = 'A library to control input modules on the Framework 16 Laptop'
# TODO: Custom README for python project
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
  "hatch",
]
authors = [
  { name = "Daniel Schaefer", email = "dhs@frame.work" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "pyserial",
  # Optional for CLI
  "getkey",
  # Optional for GUI
  "pygame",
  # Optional for image operations
  "Pillow",
]

[project.urls]
Issues = "https://github.com/FrameworkComputer/inputmodule-rs/issues"
Source = "https://github.com/FrameworkComputer/inputmodule-rs"

# TODO: Figure out how to add a runnable-script
[project.scripts]
ledmatrixctl = "inputmodule.cli:main_cli"

[project.gui-scripts]
ledmatrixgui = "inputmodule.cli:main_gui"

#[tool.hatch.version]
#source = "vcs"
#
#[tool.hatch.build.hooks.vcs]
#version-file = "inputmodule/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

# TODO: Maybe typing with mypy
# [tool.hatch.build.targets.wheel.hooks.mypyc]
# enable-by-default = false
# dependencies = ["hatch-mypyc>=0.14.1"]
# require-runtime-dependencies = true
# mypy-args = [
#   "--no-warn-unused-ignores",
# ]
# 
# [tool.mypy]
# disallow_untyped_defs = false
# follow_imports = "normal"
# ignore_missing_imports = true
# pretty = true
# show_column_numbers = true
# warn_no_return = false
# warn_unused_ignores = true
