[package]
edition = "2021"
name = "qtpy"
version = "0.2.0"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

#panic-probe.workspace = true
rp2040-panic-usb-boot.workspace = true

# Not using an external BSP, we've got the Framework Laptop 16 BSPs locally in this crate
rp2040-hal.workspace = true
rp2040-boot2.workspace = true

# USB Serial
usb-device.workspace = true
heapless.workspace = true
usbd-serial.workspace = true
fugit.workspace = true

# C1 Minimal
smart-leds.workspace = true
ws2812-pio.workspace = true

[dependencies.fl16-inputmodules]
path = "../fl16-inputmodules"
# Same feature as c1minimal
features = [ "c1minimal", "qtpy" ]
